Update 'pc76vhawn-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:1b8d0d8ff690d5a4c0ef02d56ad414e59ea976b0@sha256:ccf1a6d2a7b1be8e533a18628401378ae971700f81215e49487265daa14c95fe

--- a/components/pc76vhawn-go/overlays/development/deployment-patch.yaml
+++ b/components/pc76vhawn-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: pc76vhawn-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:1b8d0d8ff690d5a4c0ef02d56ad414e59ea976b0@sha256:ccf1a6d2a7b1be8e533a18628401378ae971700f81215e49487265daa14c95fe
+          name: container-image
